Remove extra level in src.rpm tarball

--- a/installers/linux/al2/spec/build.gradle
+++ b/installers/linux/al2/spec/build.gradle
@@ -64,8 +64,9 @@ task copySourceTar(type: Tar) {
         include "java-${project.version.major}-amazon-corretto.spec"
         into 'rpm'
     }
-    from tarTree(project.configurations.compile.singleFile)
-    into "$tarName-$tarVersion"
+    from(tarTree(project.configurations.compile.singleFile)) {
+        into '/'
+    }
 }
 
 task rpmBuild(type: Exec) {
