--- a/installers/linux/al2/spec/java-amazon-corretto.spec.template
+++ b/installers/linux/al2/spec/java-amazon-corretto.spec.template
@@ -81,7 +81,7 @@ Vendor: Amazon
 Url: https://github.com/corretto/corretto-${java_spec_version}
 Source0: amazon-corretto-source-%{java_version}.%{build_id}.%{release_id}.tar.gz
 
-%if "%{dist}" == ".amzn2"
+%if "%{dist}" == ".amzn2" || "%{dist}" == ".amzn2int"
 BuildRequires: jpackage-utils
 %else
 BuildRequires: javapackages-filesystem
@@ -146,7 +146,7 @@ Summary: Amazon Corretto headless development environment
 Group:   Development/Tools
 AutoReqProv: no
 
-%if "%{dist}" == ".amzn2"
+%if "%{dist}" == ".amzn2" || "%{dist}" == ".amzn2int"
 Requires: jpackage-utils
 %else
 Requires: javapackages-filesystem
@@ -257,6 +257,9 @@ popd
 if [ \$1 -eq 1 ] ; then
   alternatives --install %{_bindir}/java java %{java_home}/bin/java %{alternatives_priority} \\
                --slave %{_jvmdir}/jre jre %{java_home} \\
+               --slave %{_jvmdir}/jre-openjdk jre-openjdk %{java_home} \\
+               --slave %{_jvmdir}/jre-%{java_major_version} jre-%{java_major_version} %{java_home} \\
+               --slave %{_jvmdir}/jre-%{java_major_version}-openjdk jre-%{java_major_version}-openjdk %{java_home} \\
                --slave %{_bindir}/keytool keytool %{java_home}/bin/keytool \\
                --slave %{_bindir}/rmiregistry rmiregistry %{java_home}/bin/rmiregistry \\
                --slave %{_mandir}/man1/java.1 java.1 %{java_home}/man/man1/java.1 \\
@@ -267,6 +270,10 @@ fi
 %post devel
 if [ \$1 -eq 1 ] ; then
   alternatives --install %{_bindir}/javac javac %{java_home}/bin/javac %{alternatives_priority} \\
+               --slave %{_jvmdir}/%{name} %{name} %{java_home} \\
+               --slave %{_jvmdir}/java java %{java_home} \\
+               --slave %{_jvmdir}/java-%{java_major_version} java-%{java_major_version} %{java_home} \\
+               --slave %{_jvmdir}/java-%{java_major_version}-openjdk java-%{java_major_version}-openjdk %{java_home} \\
                --slave %{_bindir}/jar jar %{java_home}/bin/jar \\
                --slave %{_bindir}/jarsigner jarsigner %{java_home}/bin/jarsigner \\
                --slave %{_bindir}/javadoc javadoc %{java_home}/bin/javadoc \\
@@ -292,9 +299,6 @@ if [ \$1 -eq 1 ] ; then
                --slave %{_bindir}/jstatd jstatd %{java_home}/bin/jstatd \\
                --slave %{_bindir}/jwebserver jwebserver %{java_home}/bin/jwebserver \\
                --slave %{_bindir}/serialver serialver %{java_home}/bin/serialver \\
-               --slave %{_jvmdir}/jre-openjdk jre-openjdk %{java_home} \\
-               --slave %{_jvmdir}/jre-${java_spec_version} jre-${java_spec_version} %{java_home} \\
-               --slave %{_jvmdir}/jre-${java_spec_version}-openjdk jre-${java_spec_version}-openjdk %{java_home} \\
                --slave %{_mandir}/man1/jar.1 jar.1 %{java_home}/man/man1/jar.1 \\
                --slave %{_mandir}/man1/jarsigner.1 jarsigner.1 %{java_home}/man/man1/jarsigner.1 \\
                --slave %{_mandir}/man1/javac.1 javac.1 %{java_home}/man/man1/javac.1 \\
@@ -432,13 +436,20 @@ fi
 %license %{java_imgdir}/docs/legal
 
 %changelog
+* Thu Jun 30 2022 Dan Lutker <lutkerd@amazon.com>
+- Fixup java/jre symlinks
+
 * Tue Mar 15 2022 Dan Lutker <lutkerd@amazon.com>
 - Add config files as config(noreplace)
+
 * Fri Feb 18 2022 Dan Lutker <lutkerd@amazon.com>
 - Fix alternatives for devel package
+
 * Fri Feb 18 2022 Dan Lutker <lutkerd@amazon.com>
 - Add jwebserver to devel package
+
 * Thu Dec 16 2021 Clive Verghese <verghese@amazon.com>
 - Add requires for log4j CVE-2021-44228 static mitigation
+
 * Mon Nov 22 2021 Dan Lutker <lutkerd@amazon.com>
 - Setup AL2 package for CorrettoJdk
