AL: More fixes for alternatives and folder cleanup

--- a/installers/linux/al2/spec/java-amazon-corretto.spec.template
+++ b/installers/linux/al2/spec/java-amazon-corretto.spec.template
@@ -260,23 +260,23 @@ popd
 if [ \$1 -eq 1 ] ; then
   alternatives --install %{_bindir}/java java %{java_home}/bin/java %{alternatives_priority} \\
                --slave %{_jvmdir}/jre jre %{java_home} \\
-               --slave %{_jvmdir}/jre-openjdk jre-openjdk %{java_home} \\
-               --slave %{_jvmdir}/jre-%{java_major_version} jre-%{java_major_version} %{java_home} \\
-               --slave %{_jvmdir}/jre-%{java_major_version}-openjdk jre-%{java_major_version}-openjdk %{java_home} \\
+               --slave %{_jvmdir}/jre-openjdk jre_openjdk %{java_home} \\
                --slave %{_bindir}/keytool keytool %{java_home}/bin/keytool \\
                --slave %{_bindir}/rmiregistry rmiregistry %{java_home}/bin/rmiregistry \\
                --slave %{_mandir}/man1/java.1 java.1 %{java_home}/man/man1/java.1 \\
                --slave %{_mandir}/man1/keytool.1 keytool.1 %{java_home}/man/man1/keytool.1 \\
                --slave %{_mandir}/man1/rmiregistry.1 rmiregistry.1 %{java_home}/man/man1/rmiregistry.1
+
+  # Need to setup the jre alternatives separately when there is a higher priority jre java these don't get created above.
+  alternatives --install %{_jvmdir}/jre-%{java_major_version} jre_%{java_major_version} %{java_home}/jre %{alternatives_priority} \
+               --slave %{_jvmdir}/jre-%{java_major_version}-openjdk jre_%{java_major_version}_openjdk %{java_home}/jre
 fi
 
 %post devel
 if [ \$1 -eq 1 ] ; then
   alternatives --install %{_bindir}/javac javac %{java_home}/bin/javac %{alternatives_priority} \\
                --slave %{_jvmdir}/%{name} %{name} %{java_home} \\
-               --slave %{_jvmdir}/java java %{java_home} \\
-               --slave %{_jvmdir}/java-%{java_major_version} java-%{java_major_version} %{java_home} \\
-               --slave %{_jvmdir}/java-%{java_major_version}-openjdk java-%{java_major_version}-openjdk %{java_home} \\
+               --slave %{_jvmdir}/java java_sdk %{java_home} \\
                --slave %{_bindir}/jar jar %{java_home}/bin/jar \\
                --slave %{_bindir}/jarsigner jarsigner %{java_home}/bin/jarsigner \\
                --slave %{_bindir}/javadoc javadoc %{java_home}/bin/javadoc \\
@@ -322,25 +322,27 @@ if [ \$1 -eq 1 ] ; then
                --slave %{_mandir}/man1/jwebserver.1 jwebserver.1 %{java_home}/man/man1/jwebserver.1 \\
                --slave %{_mandir}/man1/rmic.1 rmic.1 %{java_home}/man/man1/rmic.1 \\
                --slave %{_mandir}/man1/serialver.1 serialver.1 %{java_home}/man/man1/serialver.1
+
+  alternatives --install %{_jvmdir}/java-%{java_major_version} java_sdk_%{java_major_version} %{java_home} %{alternatives_priority} \\
+               --slave %{_jvmdir}/java-%{java_major_version}-openjdk java_sdk_%{java_major_version}_openjdk %{java_home}
 fi
 
 %postun headless
 if [ \$1 -eq 0 ] ; then
   alternatives --remove java %{java_home}/bin/java
+  alternatives --remove jre_%{java_major_version} %{java_home}/jre
 fi
 
 %postun devel
 if [ \$1 -eq 0 ] ; then
   alternatives --remove javac %{java_home}/bin/javac
+  alternatives --remove java_sdk_%{java_major_version} %{java_home}
 fi
 
 %files
 %{java_lib}/libawt_xawt.so
 %{java_lib}/libjawt.so
 %{java_lib}/libsplashscreen.so
-
-%{java_inc}/jawt.h
-%{java_inc}/linux/jawt_md.h
 
 %files headless
 %config(noreplace) %{java_home}/conf/logging.properties
@@ -358,12 +360,16 @@ fi
 %config(noreplace) %{java_home}/lib/security/blocked.certs
 %config(noreplace) %{java_home}/lib/security/default.policy
 %config(noreplace) %{java_home}/lib/security/public_suffix_list.dat
+%dir %{java_home}
+%dir %{java_home}/bin
 %{java_home}/bin/java
 %{java_home}/bin/keytool
 %{java_home}/bin/rmiregistry
 %{java_home}/conf
 %{java_home}/legal
 %{java_home}/lib
+%dir %{java_home}/man
+%dir %{java_home}/man/man1
 %{java_home}/man/man1/java.1
 %{java_home}/man/man1/keytool.1
 %{java_home}/man/man1/rmiregistry.1
@@ -401,7 +407,7 @@ fi
 %{java_home}/bin/jstatd
 %{java_home}/bin/jwebserver
 %{java_home}/bin/serialver
-%{java_home}/include
+%{java_inc}
 %{java_home}/man/man1/jar.1
 %{java_home}/man/man1/jarsigner.1
 %{java_home}/man/man1/javac.1
