--- a/installers/linux/al2/spec/java-amazon-corretto.spec.template
+++ b/installers/linux/al2/spec/java-amazon-corretto.spec.template
@@ -37,7 +37,7 @@
 %global java_inc  %{java_home}/include
 
 # Where the make targets actually get written out
-%global java_imgdir build/linux-%{_arch}-server-release/images/
+%global java_imgdir build/linux-%{_arch}-server-$debug_level/images/
 
 # Higher numbers win for the alternatives program.
 %global alternatives_priority %( printf '%02d%02d%02d%02d' %{java_major_version} %{java_security_version} %{build_id} %{release_id} )
@@ -238,7 +238,7 @@ bash ./configure \\
         --with-vendor-url="https://aws.amazon.com/corretto/" \\
         --with-vendor-bug-url="https://github.com/corretto/corretto-${java_spec_version}/issues/" \\
         --with-vendor-vm-bug-url="https://github.com/corretto/corretto-${java_spec_version}/issues/" \\
-        --with-debug-level=release \\
+        --with-debug-level=$debug_level \\
         --with-native-debug-symbols=none
 
 make images
@@ -446,6 +446,9 @@ fi
 %license %{java_imgdir}/docs/legal
 
 %changelog
+* Thu Aug 18 2022 Dan Lutker <lutkerd@amazon.com>
+- Add ability to set debug_level
+
 * Fri Jul 22 2022 Dan Lutker <lutkerd@amazon.com>
 - Add provides java-devel
 
