--- a/installers/linux/universal/tar/build.gradle
+++ b/installers/linux/universal/tar/build.gradle
@@ -133,6 +133,7 @@ task packageBuildResults(type: Tar) {
         include 'ASSEMBLY_EXCEPTION'
         include 'LICENSE'
         include 'README.md'
+        include 'commitId.txt'
         include 'version.txt'
         into project.correttoJdkArchiveName
     }
